Implemented registerOrganization modal

--- a/web/client/package.json
+++ b/web/client/package.json
@@ -21,7 +21,8 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.42",
         "@types/react-dom": "^17.0.14",
-        "axios": "^0.27.1",
+        "axios": "^0.27.2",
+        "guid-typescript": "^1.0.9",
         "moment": "^2.29.3",
         "path": "0.12.7",
         "react": "^17.0.2",
