--- a/web/client/package.json
+++ b/web/client/package.json
@@ -17,11 +17,14 @@
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
+        "@types/file-saver": "^2.0.5",
         "@types/jest": "^27.4.1",
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.42",
         "@types/react-dom": "^17.0.14",
         "axios": "^0.27.2",
+        "buffer": "^6.0.3",
+        "file-saver": "^2.0.5",
         "guid-typescript": "^1.0.9",
         "moment": "^2.29.3",
         "path": "0.12.7",
