--- a/web/client/Dockerfile
+++ b/web/client/Dockerfile
@@ -5,16 +5,16 @@
 FROM node:16 as builder
 
 # Working DIR
-WORKDIR /usr/src/app
-COPY --chown=node:node ./client /usr/src/app
-COPY --chown=node:node ./common /usr/src/common
-RUN npm ci && npm run build
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
 
-FROM node:16 AS production
-WORKDIR /usr/src/app
-COPY --chown=node:node --from=builder /usr/src/app/build ./build
-COPY --chown=node:node --from=builder /usr/src/app/package.json ./
-RUN npm ci --only=production
+COPY ./client/package.json ./
+COPY ./client/package-lock.json ./
+COPY  ./client ./
+COPY ./common ../common
+RUN npm install --silent
+RUN npm install react-scripts@3.4.1 -g --silent
+
 EXPOSE 3000
 # Serve the prod build
 CMD ["npm", "start"]
