--- a/web/client/package.json
+++ b/web/client/package.json
@@ -24,6 +24,7 @@
         "@types/react-dom": "^17.0.14",
         "axios": "^0.27.2",
         "buffer": "^6.0.3",
+        "dotenv": "^16.0.1",
         "file-saver": "^2.0.5",
         "guid-typescript": "^1.0.9",
         "moment": "^2.29.3",
