--- a/network/compose/docker-compose-ca.yaml
+++ b/network/compose/docker-compose-ca.yaml
@@ -13,8 +13,9 @@ services:
 
   ca_org1:
     image: hyperledger/fabric-ca:latest
+    container_name: ca.org1.example.com
     labels:
-      service: hyperledger-fabric
+      service: ca.org1.example.com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org1
@@ -27,14 +28,14 @@ services:
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
       - ../organizations/fabric-ca/org1:/etc/hyperledger/fabric-ca-server
-    container_name: ca_org1
     networks:
       - test
 
   ca_org2:
     image: hyperledger/fabric-ca:latest
+    container_name: ca.org2.example.com
     labels:
-      service: hyperledger-fabric
+      service: ca.org2.example.com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org2
@@ -47,14 +48,14 @@ services:
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
       - ../organizations/fabric-ca/org2:/etc/hyperledger/fabric-ca-server
-    container_name: ca_org2
     networks:
       - test
 
   ca_orderer:
     image: hyperledger/fabric-ca:latest
+    container_name: ca_orderer.example.com
     labels:
-      service: hyperledger-fabric
+      service: ca_orderer.example.com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-orderer
@@ -67,6 +68,5 @@ services:
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
       - ../organizations/fabric-ca/ordererOrg:/etc/hyperledger/fabric-ca-server
-    container_name: ca_orderer
     networks:
       - test
